# serialization

./: pom.xml
src/main/avro/: measurements.avsc
src/main/capnp/: measurements.capnp
src/main/cpp/: CMakeLists.txt  main.cpp  measurements.h
src/main/java/cz/esw/serialization/: App.java  AppTest.java  DataProducer.java  ProtocolType.java  ResultChecker.java  ResultConsumer.java
src/main/java/cz/esw/serialization/handler/: AvroDataHandler.java  CapnpDataHandler.java  DataHandler.java  JsonDataHandler.java  ProtoDataHandler.java
src/main/java/cz/esw/serialization/json/: Dataset.java  MeasurementInfo.java
src/main/proto/: measurements.proto
src/test/java/cz/esw/serialization/: DataProducerTest.java
